[package]
name = "ssh-casign-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
oidc-jwt-validator = "0.2.3"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["native-tls"] }
serde = { version = "1.0.214", features = ["derive", "rc"] }
serde_json = "1.0.132"
ssh-key = { version = "0.6.7", features = ["dsa", "p256", "ed25519", "rsa"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
